--- a/專題/專題計劃書.md
+++ b/專題/專題計劃書.md
@@ -4,6 +4,31 @@
 
 <H2><center>陳鐸元 呂振麒 李宓</center></H2>
 
+## 大綱
+* 選定題目
+* 下載 data set
+* 預測
+	* 預備
+	* 載入 data set
+	* 分析
+	* 將字串轉成數字型態
+	* 利用隨機森林選取重要特徵
+	* Model: Random Forest
+	* Model: Gradient Boosting
+	* Model: Logistic Regression
+	* One Hot Encoding 解決 Categorial Features
+	* 資料正規化
+	* 主成份分析
+	* 線性判別分析
+	* Model: Support Vector Machine
+	* Model: K Nearist Neighbors
+* 選擇一個結果上傳
+* 排名
+* 目標
+
+
+
+
 ## 選定題目
 
 ![Competitions](Competition-0.png)
